🧱 🐛 ✨ 🎨 Improve Pf2e deities, particularly the speeds
- 🧱 Move Pf2eTypeReader.Speed into a richer top-level class with more granular parsing options
- ✨ Add more granular access to speed-related properties so template authors can customize the output
- ✨ Add a more compact default representation for deity.avatar for template authors to use
- 🎨 Move the existing multiline deity avatar representation into the deity2md template instead
- 🐛 Fix a bug where shield value was incorrectly given regardless of whether the deity's avatar had a shield provided
- 🐛 Fix a bug where deity avatar actions would have broken display for traits and have empty parens or "(, " because of traits which were empty strings
- 🎨 Make default deity and speed representations closer to the book entries